--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "yukdiorder/wp-helper",
     "description": "Membantu wordpress developer untuk mengerjakan fungsi - fungsi wordpress sederhana",
     "type": "library",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Isnainy Nasrullah",
