--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "yukhelper",
   "version": "0.1.0",
   "main": "Gruntfile.js",
-  "author": "YOUR NAME HERE",
+  "author": "Isnainy Nasrullah",
   "scripts" : {
     "start" : "grunt default" ,
     "readme" : "grunt readme",
