--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "htmlburger/carbon-fields-plugin": "dev-master"
     },
     "autoload" : {
         "psr-4" : {
-            "Yukdiorder\\Helper\\" : "src/"
-        }
+            "Yukdiorder\\Helper\\" : "src/",
+            "Yukdiorder\\Designs\\" : "src/Designs"
+        } ,
+        "files" : ["includes/functions.php"]
     }
 }
