--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,6 @@
-site_name: My Docs
+site_name: Yuk Helper Reference
+site_url: https://www.yukdiorder.com/
+nav:
+    - Home: index.md
+    - About: about.md
+theme: readthedocs
